# rba-hawko-meter

./: README.md  coverage.json  lefthook.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-asx-futures.yml  weekly-pipeline.yml
.planning/: CLAUDE.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v3.0-REQUIREMENTS.md
.planning/phases/: 24-CONTEXT.md
.planning/research/: ARCHITECTURE.md  CLAUDE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  asic-compliance.md  rba-decision-drivers.md  z-score-methodology.md
data/: abs_building_approvals.csv  abs_cpi.csv  abs_employment.csv  abs_household_spending.csv  abs_retail_trade.csv  abs_wage_price_index.csv  asx_futures.csv  corelogic_housing.csv  nab_capacity.csv  rba_cash_rate.csv  weights.json
pipeline/: config.py  main.py
pipeline/ingest/: abs_data.py  asx_futures_scraper.py  corelogic_scraper.py  nab_scraper.py  rba_data.py
pipeline/normalize/: archive.py  engine.py  gauge.py  ratios.py  zscore.py
pipeline/utils/: csv_handler.py  http_client.py
public/: CLAUDE.md  index.html
public/data/: CLAUDE.md  meetings.json  rates.json  status.json
public/js/: CLAUDE.md  calculator.js  chart.js  data.js  gauge-init.js  main.js  (+2 more)
scripts/: backfill_historical.py  check_coverage.py
tests/: CLAUDE.md  calculator.spec.js  dashboard.spec.js  phase6-ux.spec.js
(+56 files in other folders)
